added pages to website

--- a/Website/index.html
+++ b/Website/index.html
@@ -23,21 +23,20 @@
       </div>
       <ul class="nav-links">
         <li>
-                <i id="house" class="fas fa-home"></i>
-          <a href="#">Homefront</a>
-          
-        </li>
-        <li>
                 <i id="char" class="fas fa-address-book"></i>
-          <a href="#">Characters</a>
+          <a href="./Pages/characters.html">Characters</a>
         </li>
         <li>
                 <i id="adven" class="fas fa-dice"></i>
-          <a href="#">Adventure</a>
+          <a href="./Pages/adventure.html">Adventure</a>
         </li>
         <li>
                 <i id="goal" class="fas fa-star-half-alt"></i>
-          <a href="#">Goals</a>
+          <a href="./Pages/goals.html">Goals</a>
+        </li>
+        <li>
+            <i id="calen" class="far fa-calendar-alt"></i>
+          <a href="./Pages/calendar.html">Calendar</a>
         </li>
       </ul>
       <div class="burger">
@@ -46,9 +45,9 @@
         <div class="line3"></div>
       </div>
     </nav>
-    <div class="body">
+    <div class="box1">
     <h2>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+      Lorem ipsum dolor sit amet <a class="section1" href="#">Lorem.</a> consectetur adipisicing elit. Voluptates
       expedita qui consequuntur voluptatum velit eum alias iusto nesciunt saepe
       commodi?
       <p id="about">
@@ -70,7 +69,9 @@
     </p>
     <p id="history">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, vitae fugiat corporis ad temporibus perferendis expedita voluptatem nisi id et dolorem, eius, quia alias tenetur iste cumque quo quibusdam illo.</p>
     <p id="history">Lorem, ipsum.</p>
-    <h4 class="T-locale">
+    </div>
+    <div class="box2">
+    <h2 class="T-locale"> Lorem ipsum dolor sit amet.</h2>
       <ul>
         <li>Lorem, ipsum.</li>
         <li>Lorem, ipsum dolor.</li>
@@ -81,9 +82,12 @@
         <li>Lorem, ipsum.</li>
         <li>Lorem, ipsum.</li>
       </ul>
-    </h4>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, aut.</p>
-</div>
+    
+    <p>Lorem, ipsum dolor sit amet consectetur <a class="section2" href="#">Lorem.</a> adipisicing elit. Ea, aut.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, obcaecati illum, vel aliquid tenetur consectetur excepturi beatae fuga quisquam repellat accusamus cum quo ut similique quod consequuntur, quam ab architecto!</p>
+
+    </div>
+    <script src="./Java/scroll.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
