--- a/Website/Pages/calendar.html
+++ b/Website/Pages/calendar.html
@@ -55,11 +55,11 @@
         </div>
       </nav>
       <h1>lorem5</h1>
-  <div class="calendar-container">
-      <div class="calendar-header">
+  <div id="calendar-container">
+      <div id="calendar-header">
           <span id="calendar-month-year"></span>
       </div>
-  <div class="calendar-dates">
+  <div id="calendar-dates">
       <table>
           
       </table>
