--- a/Website/Pages/calendar.html
+++ b/Website/Pages/calendar.html
@@ -65,8 +65,9 @@
       </table>
   </div>
     </div>
-    <button></button>
-    <button></button>
+ <h2>lorm1
+   
+ </h2>
     
     <script src="../Java/calendar.js"></script>
     <script src="../app.js"></script>
