--- a/Website/Pages/adventure.html
+++ b/Website/Pages/adventure.html
@@ -20,8 +20,7 @@
         <div class="logo">
               <i id="tbook" class="fas fa-book-dead"></i>
           <h4 id="title">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
-            quae?
+            Terenia
           </h1>
         </div>
         <ul class="nav-links">
@@ -53,6 +52,7 @@
           <div class="line3"></div>
         </div>
       </nav>
+      <img src="../img/pexels-photo-691668.jpeg" alt="">
     <script src="../app.js"></script>
   </body>
 </html>
