--- a/Website/Pages/calendar.html
+++ b/Website/Pages/calendar.html
@@ -21,8 +21,7 @@
         <div class="logo">
               <i id="tbook" class="fas fa-book-dead"></i>
           <h4 id="title">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
-            quae?
+            Terenia
           </h1>
         </div>
         <ul class="nav-links">
@@ -66,7 +65,7 @@
   </div>
     </div>
  <h2>lorm1
-   
+
  </h2>
     
     <script src="../Java/calendar.js"></script>
