--- a/Website/index.html
+++ b/Website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    
     <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/d4aec553df.js"
@@ -17,8 +18,7 @@
       <div class="logo">
             <i id="tbook" class="fas fa-book-dead"></i>
         <h4 id="title">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
-          quae?
+         Terenia
         </h1>
       </div>
       <ul class="nav-links">
@@ -46,6 +46,7 @@
       </div>
     </nav>
     <div class="box1">
+      <img src="./img/landscapetp.jpeg" alt="">
     <h2>
       Lorem ipsum dolor sit amet <a class="section1" href="#">Lorem.</a> consectetur adipisicing elit. Voluptates
       expedita qui consequuntur voluptatum velit eum alias iusto nesciunt saepe
@@ -86,6 +87,14 @@
     <p>Lorem, ipsum dolor sit amet consectetur <a class="section2" href="#">Lorem.</a> adipisicing elit. Ea, aut.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, obcaecati illum, vel aliquid tenetur consectetur excepturi beatae fuga quisquam repellat accusamus cum quo ut similique quod consequuntur, quam ab architecto!</p>
 
+    </div>
+    <div class="bottom">
+      <h5 id="top_left">Lorem, ipsum.</h5>
+      <h5 id="top_right">Lorem.</h5>
+      <h5 id="center_right">Lorem, ipsum dolor.</h5>
+      <h5 id="center_left">Lorem ipsum dolor sit amet consectetur.</h5>
+      <h5 id="bottom_left">Lorem ipsum dolor sit.</h5>
+      <h5 id="bottom_right">Lorem, ipsum.</h5>
     </div>
     <script src="./Java/scroll.js"></script>
     <script src="./app.js"></script>
