--- a/Website/Pages/adventure.html
+++ b/Website/Pages/adventure.html
@@ -12,47 +12,54 @@
       src="https://kit.fontawesome.com/d4aec553df.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="../Style/img.css" />
     <link rel="stylesheet" href="../style.css" />
     <title>Document</title>
   </head>
   <body>
     <nav>
-        <div class="logo">
-              <i id="tbook" class="fas fa-book-dead"></i>
-          <h4 id="title">
-            Terenia
-          </h1>
+      <div class="logo">
+        <a i id="tbook" class="fas fa-book-dead" href="../index.html"></i></a>
+        <a href="../index.html" id="title">
+          Terenia
+        </a>
+      </div>
+      <ul class="nav-links">
+        <li>
+          <i id="char" class="fas fa-address-book"></i>
+          <a href="./characters.html">Characters</a>
+        </li>
+        <li>
+          <i id="adven" class="fas fa-dice"></i>
+          <a href="./adventure.html">Adventure</a>
+        </li>
+        <li>
+          <i id="goal" class="fas fa-star-half-alt"></i>
+          <a href="./goals.html">Goals</a>
+        </li>
+        <li>
+          <i id="calen" class="far fa-calendar-alt"></i>
+          <a href="./calendar.html">Calendar</a>
+        </li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+    <img id="adimg" src="../img/pexels-photo-691668.jpeg" alt="" />
+    <div class="bottom">
+        <div class="bottom-content">
+          <div class="bottom-section about"></div>
+          <div class="bottom-section links"></div>
+          <div class="bottom-section contact-form"></div>
         </div>
-        <ul class="nav-links">
-          <li>
-                  <i id="house" class="fas fa-home"></i>
-            <a href="../index.html">Homefront</a>
-            
-          </li>
-          <li>
-                  <i id="char" class="fas fa-address-book"></i>
-            <a href="./characters.html">Characters</a>
-          </li>
-          <li>
-                  <i id="adven" class="fas fa-dice"></i>
-            <a href="./adventure.html">Adventure</a>
-          </li>
-          <li>
-                  <i id="goal" class="fas fa-star-half-alt"></i>
-            <a href="./goals.html">Goals</a>
-          </li>
-          <li>
-              <i id="calen" class="far fa-calendar-alt"></i>
-            <a href="./calendar.html">Calendar</a>
-          </li>
-        </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+        <div class="bottom-bottom">
+          &copy; Terenia Survival | Designed by Jonathan Rush
         </div>
-      </nav>
-      <img src="../img/pexels-photo-691668.jpeg" alt="">
+       
+      </div>
     <script src="../app.js"></script>
   </body>
 </html>
