Added responsiveness and styling

--- a/Website/Pages/characters.html
+++ b/Website/Pages/characters.html
@@ -53,17 +53,43 @@
       <img id="charimg" src="../img/characters.jpeg" alt="">
       <div class="cBox1">
        <h1 id="topt">The Heroes</h1>
+       <div class="characterRow">
         <div class="cVidar">
          <h2>Vidar No Name</h2>
          <img id="Vidar" src="../img/Vidar.jpg" alt="">
          <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="cPercy">
-          <h2>Percy the Warrior</h2>
+          <h2>Percy the Hunter</h2>
           <img id="Percy" src="../img/percy.jpg" alt="">
+          <p>Lorem, ipsum dolor.</p>
+        </div>
+        <div  class="cMilfred">
+          <h2>"Milfred" of Wild Source</h2>
+          <img id="Milfred" src="../img/Milfred.jpg" alt="">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+        <div class="cDominus">
+          <h2>Paladin of Ansten Dom</h2>
+          <img id="Dominus" src="../img/Dominus.jpg" alt="">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+        </div>
+       </div>
+      </div>
+      <div class="cBox2">
+        <h1 id="top2">The Villains</h1>
+        <div class="villainRow">
+          <div class="bloodMoon">
+            <h2>Blood Moon Robes</h2>
+          </div>
+          <div class="asterRush">
+            <h2>Aster Rush</h2>
+          </div>
+          <div class="starEyed">
+            <h2>Star Eyed Salletes</h2>
+          </div>
         </div>
       </div>
-      <div class="cBox2"></div>
       <div class="cBox3"></div>
       <div class="cBox4"></div>
       <div class="bottom">
