Added finalized adventure content

--- a/Website/Pages/characters.html
+++ b/Website/Pages/characters.html
@@ -52,7 +52,7 @@
       </nav>
       <img id="charimg" src="../img/characters.jpeg" alt="">
       <div class="cBox1">
-       <h1 id="topt">The Heroes</h1>
+       <h1 id="topt"><a class="section1" href="#">The Heroes</a></h1>
        <div class="characterRow">
         <div class="cVidar">
          <h2>Vidar No Name</h2>
@@ -77,7 +77,7 @@
        </div>
       </div>
       <div class="cBox2">
-        <h1 id="top2">The Villains</h1>
+        <h1 id="topt"><a class="section3" href="#">The Villains</a></h1>
         <div class="villainRow">
           <div class="vbloodMoon">
             <h2>Blood Moon Robes</h2>
@@ -113,7 +113,7 @@
         </div>
       </div>
       <br>
-      <h2 id="Just">Their Cause is Just</h2>
+      <h2 id="Just"><a class="section2" href="#">Their Cause is Just</a></h2>
       <br>
       <div class="cBox4">
         <div id="heroBio" class="vidarBio">
@@ -237,7 +237,7 @@
         </div>
       </div>
       <br>
-      <h2 id="dawn">Their Dawn in Nigh</h2>
+      <h2 id="dawn"><a class="section4" href="#">Their Dawn in Nigh</a></h2>
       <br>
       <div class="cBox5">
         <div id="villainBio" class="bloodBio">
@@ -390,6 +390,7 @@ Favorite targets: Adolescent
           </div>
          
         </div>
+        <script src="../Java/scroll.js"></script>
       <script src="../app.js"></script>
   </body>
 </html>
