--- a/Website/Pages/goals.html
+++ b/Website/Pages/goals.html
@@ -50,6 +50,27 @@
         </div>
       </nav>
       <img id="goalimg" src="../img/goal.jpeg" alt="">
+      <div class="goalList">
+        <h2>Goals</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur esse laudantium nihil?
+        </p>
+        <p>Lorem ipsum dolor sit.</p>
+        <ul>
+          <li id="noStyle">yes</li>
+          <li id="noStyle">tw</li>
+          <li id="noStyle">e</li>
+          <li id="noStyle">e</li>
+          <li id="noStyle">e</li>
+          <li id="noStyle">e</li>
+          <li id="noStyle">ew</li>
+          <li id="noStyle">e</li>
+          <li id="noStyle">w</li>
+          <li id="noStyle">e</li>
+          <li id="noStyle">w</li>
+        </ul>
+        <img src="../img/goalyes.jpg" alt="">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas accusamus voluptates illum expedita magnam nostrum exercitationem veniam at debitis quibusdam, pariatur rem, libero minima doloribus facere sapiente! Id, culpa ut!</p>
+      </div>
       <div class="bottom">
           <div class="bottom-content">
             <div class="bottom-section about">
