--- a/To-do List JS App/index.html
+++ b/To-do List JS App/index.html
@@ -36,7 +36,7 @@
       </button>
     </header>
     <div class="container">
-      <ul class="todo" id="">
+      <ul class="todo" id="todo">
         <li>
           Item
 
@@ -112,7 +112,7 @@
         </li>
       </ul>
 
-      <ul class="todo"></ul>
+      <ul class="todo" id="completed"></ul>
     </div>
     <script src="./js/app.js"></script>
   </body>
