--- a/Shopping cart comfy house JS/index.html
+++ b/Shopping cart comfy house JS/index.html
@@ -44,8 +44,8 @@
         <h2>our products</h2>
       </div>
       <div class="products-center">
-        <!--single product-->
-        <article class="product">
+        <!-- single product-->
+        <!-- <article class="product">
           <div class="img-container">
             <img
               src="./images/product-1.jpeg"
@@ -59,8 +59,8 @@
           </div>
           <h3>queen bed</h3>
           <h4>$16</h4>
-        </article>
-        <!--single product end-->
+        </article> -->
+        <!--single product end -->
        <!--cart-->
        <div class="cart-overlay">
            <div class="cart">
@@ -92,6 +92,7 @@
            </div>
        </div>
        <!--cart end-->
+       <script src="./products.json"></script>
     <script src="./app.js"></script>
   </body>
 </html>
