Added Completed project

--- a/Shopping cart comfy house JS/index.html
+++ b/Shopping cart comfy house JS/index.html
@@ -60,29 +60,31 @@
           <h3>queen bed</h3>
           <h4>$16</h4>
         </article> -->
-        <!--single product end -->
-       <!--cart-->
-       <div class="cart-overlay">
-           <div class="cart">
-               <span class="close-cart">
-                   <i class="fas fa-window-close"></i>
-               </span>
-               <h2>your cart</h2>
-               <div class="cart-content">
-                   <!--cart item-->
-                   <!-- <div class="cart-item">
-                       
-                    </div> -->
-                   <!--cart item end-->
-               </div>
-               <div class="cart-footer">
-                   <h3>your total : $ <span class="cart-total">0</span></h3>
-                   <button class="clear-cart banner-btn">clear cart</button>
-               </div>
-           </div>
-       </div>
-       <!--cart end-->
-       <script src="./products.json"></script>
+      </div>
+    </section>
+    <!--single product end -->
+    <!--cart-->
+    <div class="cart-overlay">
+      <div class="cart">
+        <span class="close-cart">
+          <i class="fas fa-window-close"></i>
+        </span>
+        <h2>your cart</h2>
+        <div class="cart-content">
+          <!--cart item-->
+
+          <!--cart item end-->
+        </div>
+        <div class="cart-footer">
+          <h3>your total : $ <span class="cart-total">0</span></h3>
+          <button class="clear-cart banner-btn">clear cart</button>
+        </div>
+      </div>
+    </div>
+    <!--cart end-->
+    <!--Contentful-->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!--AppJS-->
     <script src="./app.js"></script>
   </body>
 </html>
